# commander-tournament

./: Cargo.toml  data.tsv  game.ron  new-game.ron  old-game.ron  test.ron
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: fonts.rs  lib.rs  logic.rs  main.rs  tests.rs  traits.rs  view.rs
app/src/logic/: file.rs
app/src/message/: filesystem.rs
app/src/old_message/: mod.rs
app/src/old_tests/: mod.rs  utils.rs
app/src/old_view/: mod.rs
app/src/old_view/home/: mod.rs
app/src/view/: config_matchmaker.rs  confirm.rs  confirm_prompt.rs  home.rs  player.rs  prompt_confirmation.rs  view_player.rs
app/src/view/home/: leaderboard.rs  matchmaker.rs  matchup.rs
app/tests/: manual_entry.rs
edh_tourn/: Cargo.toml
edh_tourn/res/tests/: sample-game.ron
edh_tourn/src/: compat.rs  config.rs  dev.rs  error.rs  game.rs  info.rs  lib.rs  matches.rs  player.rs  serialization.rs  stats.rs  testing.rs  tsv.rs  utils.rs
edh_tourn/src/compat/: v1.rs  v2.rs
edh_tourn/src/game/: entry.rs  match_player.rs  matchup.rs  record.rs
edh_tourn/src/player/: color.rs  info.rs  stats.rs
src/: lib.rs  main.rs  tnm.rs  tournament.rs
src/app/: message.rs  mod.rs  traits.rs  view.rs
src/app/components/: leaderboard.rs
src/app/message/: filesystem.rs  mod.rs
src/app/tests/: mod.rs  utils.rs
src/app/view/: mod.rs  player.rs  player_info.rs
src/app/view/home/: leaderboard.rs  mod.rs
src/compat/: mod.rs  v1.rs
src/tourn/: config.rs  game.rs  info.rs  matches.rs  mod.rs  stats.rs  testing.rs  tsv.rs
src/tournament/: config.rs  error.rs  errors.rs  game.rs  info.rs  matches.rs  matchmaking.rs  mod.rs  stats.rs  tests.rs  tsv.rs
src/ui/: errors.rs  message.rs  mod.rs  state.rs  view.rs
src/ui/views/: game_input.rs  game_matchups.rs  games_table.rs  leaderboard.rs  mod.rs  modal.rs  toolbar.rs
src/utils/: serde_utils.rs
tests/: compat-v1.ron  sample-game.ron  sample-tsv.tsv  v1-game.ron
