[package]
name = "commander-tournament"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
iced = "0.14.0"
itertools = "0.14.0"
opener = "0.8.4"
ron = "0.12.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"

[workspace.lints.clippy]
pedantic = {level = "warn", priority = -1}
complexity = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}

assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
default_instead_of_iter_empty = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
missing_assert_message = "warn"
mod_module_files = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
wildcard_dependencies = "warn"
redundant_feature_names = "warn"
renamed_function_params = "warn"
too_many_lines = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
needless_collect = { level = "allow", priority = 1 }
