[package]
name = "edh_tourn"
version = "0.1.0"
edition = "2024"

[features]
dev = []

[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
serde = {version="1.0.228", features=["derive"]}
thiserror = "2.0.18"
ron = "0.12.0"

[dev-dependencies]
edh_tourn = {path=".", features=["dev"]}
toml = "1.0.3"
serde_json = "1.0.149"
approx = "0.5.1"

[lints]
workspace = true
